Fix z-index for project page and align images for show

--- a/app/assets/stylesheets/partials/shared/projects.scss
+++ b/app/assets/stylesheets/partials/shared/projects.scss
@@ -7,6 +7,11 @@
 }
 
 .project-cover-photo-content {
+  z-index: 1;
+}
+
+.project-info-content {
+  z-index: 2;
 }
 
 // Configuration for different sizes
